Changed Background color and added paragraph

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	</title>
 <style>
 body {
-background-color: cyan;
+background-color: blue;
 text-align: center;
 padding-top:200px;
 }
 </style>
 <body>
+	<p>hello!</p>
 	<h1 align="center">Quote!</h1>
 	<button id="myBtn">Click for quote</button>
 </body>
